minor fixes for deprecated calls in jdk 11